--- a/HomeWork/Modul 3/HomeWork.csproj
+++ b/HomeWork/Modul 3/HomeWork.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Sign and login\Users\" />
+  </ItemGroup>
+
 </Project>
